--- a/Dockerfile.dev_paperboy
+++ b/Dockerfile.dev_paperboy
@@ -1,4 +1,4 @@
-FROM darthjee/paperboy-base:0.0.1
+FROM darthjee/dev_paperboy-base:0.0.1
 
 WORKDIR /home/app/app
 COPY --chown=app:app source/Gemfile* /home/app/app/
