--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 version: '3'
 services:
-  paperboy_mysql:
+  dev_paperboy_mysql:
     image: mysql:5.7
-    container_name: paperboy_mysql
+    container_name: dev_paperboy_mysql
     env_file: .env
     environment:
       MYSQL_ROOT_PASSWORD: paperboy
@@ -16,7 +16,7 @@ services:
     volumes:
       - ./source:/home/app/app
     links:
-      - paperboy_mysql:mysql
+      - dev_paperboy_mysql:mysql
     env_file: .env
 
 
