--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,17 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: paperboy
     ports:
-      - 127.0.0.1:$PAPERBOY_MYSQL_PORT:3306
+      - 127.0.0.1:$DEV_PAPERBOY_MYSQL_PORT:3306
+
+  paperboy_mysql:
+    image: mysql:5.7
+    container_name: paperboy_mysql
+    env_file: .env
+    environment:
+      MYSQL_ROOT_PASSWORD: paperboy
+    ports:
+      - 127.0.0.1:$LOCAL_PAPERBOY_MYSQL_PORT:3306
+
 
   #################### Base  ####################
 
