--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
   paperboy_mysql:
     image: mysql:5.7
     container_name: paperboy_mysql
-    env_file: .env.dev
+    env_file: .env
     environment:
       MYSQL_ROOT_PASSWORD: paperboy
     ports:
