--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ PAPERBOY_MYSQL_USER=root
 PAPERBOY_MYSQL_NAME=paperboy
 PAPERBOY_MYSQL_PASSWORD=paperboy
 PAPERBOY_PASSWORD_SALT=abcd
+RAILS_ENV=production
