Add database volume

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -88,5 +88,6 @@ services:
     links:
       - paperboy_mysql:mysql
 
-  volumes:
-    paperboy_mysql
+volumes:
+  paperboy_mysql:
+    external: false
