--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,8 @@ source/coverage
 source/.yardoc
 source/doc
 
+mysql
+
 source/vendor/assets/bower_components/
 # Ignore master key for decrypting credentials and more.
 source/config/master.key
