--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,15 @@ workflows:
           filters:
             tags:
               only: /.*/
-      - build-and-release:
+      - build-and-release-production:
+          requires: [test, checks]
+          filters:
+            tags:
+              only: /.*/
+            branches:
+              only:
+                - master
+      - build-and-release-container:
           requires: [test, checks]
           filters:
             tags:
@@ -90,7 +98,7 @@ jobs:
       - run:
           name: Rubocop
           command: rubocop
-  build-and-release:
+  build-and-release-production:
     machine: true
     steps:
       - checkout
@@ -118,3 +126,16 @@ jobs:
       - run:
           name: Populate fields
           command: scripts/release.sh populate
+  build-and-release-container:
+    machine: true
+    steps:
+      - checkout
+      - run:
+          name: Docker login
+          command: docker login --username=$DOCKER_USER --password=$DOCKER_PASS
+      - run:
+          name: Make Build
+          command: scripts/release.sh build-local
+      - run:
+          name: Release
+          command: scripts/release.sh release-local
