--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -85,5 +85,6 @@ services:
     env_file: .env
     container_name: paperboy
     image: darthjee/paperboy
+    command: rails s
     links:
       - paperboy_mysql:mysql
