Serve static files

--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@ PAPERBOY_MYSQL_NAME=paperboy
 PAPERBOY_MYSQL_PASSWORD=paperboy
 PAPERBOY_PASSWORD_SALT=abcd
 RAILS_ENV=production
+RAILS_SERVE_STATIC_FILES=true
