--- a/Dockerfile.production_paperboy
+++ b/Dockerfile.production_paperboy
@@ -1,4 +1,4 @@
-FROM darthjee/production_paperboy-base:0.0.2 as base
+FROM darthjee/production_paperboy-base:0.0.3 as base
 
 ####################################
 
@@ -6,7 +6,7 @@ FROM base as builder
 
 COPY --chown=app:app ./source/ /home/app/app/
 
-RUN bundle install --clean --without development test;
+RUN bundle install --without development test;
 
 RUN rm /home/app/app/config/master.key -f
 RUN rm /home/app/app/config/credentials.yml.enc -f
@@ -26,4 +26,4 @@ FROM base
 
 COPY --chown=app:app --from=builder /home/app/app/ /home/app/app/
 
-RUN bundle install --clean --without development test
+RUN bundle install --without development test
