--- a/source/Gemfile
+++ b/source/Gemfile
@@ -35,7 +35,7 @@ gem 'jbuilder', '~> 2.5'
 gem 'bootsnap', '>= 1.1.0', require: false
 
 gem 'arstotzka',    '~> 1.6.2'
-gem 'azeroth',      '>= 0.8.2'
+gem 'azeroth',      '>= 0.10.1'
 gem 'bower-rails',  '~> 0.12.0'
 gem 'magicka',      '~> 0.6.0'
 gem 'newrelic_rpm', '~> 6.9.0.363'
@@ -76,6 +76,7 @@ group :development do
   gem 'yard',                  '0.9.27'
   gem 'yardstick',             '0.9.9'
   gem 'zonebie',               '0.6.1'
+  gem 'zyra',                  '1.1.0'
 end
 
 group :development, :test do
