Add password salt

--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ PAPERBOY_MYSQL_PORT=3306
 PAPERBOY_MYSQL_USER=root
 PAPERBOY_MYSQL_NAME=paperboy
 PAPERBOY_MYSQL_PASSWORD=paperboy
+PAPERBOY_PASSWORD_SALT=abcd
