--- a/Dockerfile.paperboy
+++ b/Dockerfile.paperboy
@@ -1,4 +1,4 @@
-FROM darthjee/stalchild-base:0.0.1
+FROM darthjee/paperboy-base:0.0.3
 
 WORKDIR /home/app/app
 COPY --chown=app:app source/Gemfile* /home/app/app/
