--- a/source/package.json
+++ b/source/package.json
@@ -8,7 +8,7 @@
     "jquery": "3.6.1",
     "js-cookie": "2.2.1",
     "querystring": "0.2.1",
-    "kanto": "0.0.2",
+    "johto": "0.0.1",
     "cyberhawk": "0.7.0"
   }
 }
