--- a/source/package.json
+++ b/source/package.json
@@ -1,14 +1,14 @@
 {
   "dependencies": {
     "angular": "1.4.8",
-    "yarn": "^1.22.22",
     "angular-route": "1.4.8",
-    "underscore": "1.13.6",
     "bootstrap": "4.6.2",
+    "cyberhawk": "0.7.0",
+    "johto": "^0.0.1",
     "jquery": "3.6.1",
     "js-cookie": "2.2.1",
     "querystring": "0.2.1",
-    "johto": "0.0.1",
-    "cyberhawk": "0.7.0"
+    "underscore": "1.13.6",
+    "yarn": "^1.22.22"
   }
 }
