--- a/Dockerfile.paperboy-base
+++ b/Dockerfile.paperboy-base
@@ -1,5 +1,5 @@
-FROM darthjee/scripts:0.3.2 as scripts
-FROM darthjee/taa:1.4.0 as base
+FROM darthjee/scripts:0.4.1 as scripts
+FROM darthjee/taa:1.4.1 as base
 
 ######################################
 
@@ -10,6 +10,11 @@ ADD source/package.json /home/app/app/
 
 ENV HOME_DIR /home/app
 
+USER root
+COPY --chown=app:app --from=scripts /home/scripts/builder/yarn_builder.sh /usr/local/sbin/yarn_builder.sh
+RUN /bin/bash yarn_builder.sh
+USER app
+
 COPY --chown=app:app --from=scripts /home/scripts/builder/bundle_builder.sh /usr/local/sbin/bundle_builder.sh
 RUN /bin/bash bundle_builder.sh
 
@@ -18,3 +23,4 @@ RUN /bin/bash bundle_builder.sh
 FROM base
 
 COPY --chown=app:app --from=builder /home/app/bundle/ /usr/local/bundle/
+COPY --chown=app:app --from=builder /home/app/node_modules/ /usr/lib/node_modules
