Fix package name

--- a/Dockerfile.circleci_paperboy-base
+++ b/Dockerfile.circleci_paperboy-base
@@ -6,7 +6,7 @@ FROM darthjee/circleci_taa:1.4.1 as base
 FROM base as builder
 
 ADD source/Gemfile* /home/circleci/project/
-ADD source/bower.json /home/circleci/project/
+ADD source/package.json /home/circleci/project/
 
 ENV HOME_DIR /home/circleci
 
