--- a/Dockerfile.production_paperboy-base
+++ b/Dockerfile.production_paperboy-base
@@ -6,7 +6,7 @@ FROM darthjee/production_taa:1.4.1 as base
 FROM base as builder
 
 ADD source/Gemfile* /home/app/app/
-ADD source/bower.json /home/app/app/
+ADD source/package.json /home/app/app/
 
 ENV HOME_DIR /home/app
 
