--- a/Dockerfile.production_paperboy
+++ b/Dockerfile.production_paperboy
@@ -13,12 +13,13 @@ RUN rm /home/app/app/config/credentials.yml.enc -f
 RUN rm /home/app/app/public/assets/* -rf
 RUN rm /home/app/app/spec -rf
 RUN EDITOR=none rails credentials:edit
-RUN rake bower:install
+RUN yarn install
 RUN RAILS_ENV=production rails assets:precompile
 RUN rm /home/app/app/assets -rf
 RUN rm /home/app/app/vendor/assets -rf
 RUN rm /home/app/app/log/* -f
 RUN rm /home/app/app/tmp/* -rf
+RUN rm /home/app/app/node_modules -rf
 
 ##################################
 
