--- a/source/package.json
+++ b/source/package.json
@@ -7,7 +7,7 @@
     "johto": "^0.0.1",
     "jquery": "3.6.1",
     "js-cookie": "2.2.1",
-    "querystring": "0.2.1",
+    "query-string": "9.0.0",
     "underscore": "1.13.6",
     "yarn": "^1.22.22"
   }
