--- a/Dockerfile.paperboy
+++ b/Dockerfile.paperboy
@@ -1,10 +1,8 @@
-FROM darthjee/paperboy-base:0.0.5
+FROM darthjee/paperboy-base:0.1.0
 
 WORKDIR /home/app/app
 COPY --chown=app:app source/Gemfile* /home/app/app/
-COPY --chown=app:app source/bower.json /home/app/app/
+COPY --chown=app:app source/package.json /home/app/app/
 
 RUN bundle install
-
-USER app
-RUN bower install
+RUN yarn install
