--- a/source/package.json
+++ b/source/package.json
@@ -1,14 +1,13 @@
 {
-  "name": "bower_files",
   "dependencies": {
     "angular": "1.4.8",
     "angular-route": "1.4.8",
-    "underscore": "1.13.6",
     "bootstrap": "4.6.2",
+    "cyberhawk": "0.8.0",
+    "johto": "^0.0.1",
     "jquery": "3.6.1",
     "js-cookie": "2.2.1",
-    "querystring": "3.46.1",
-    "kanto": "0.0.2",
-    "cyberhawk": "0.7.0"
+    "underscore": "1.13.6",
+    "yarn": "^1.22.22"
   }
 }
