--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,7 @@ workflows:
 jobs:
   test:
     docker:
-      - image: darthjee/circleci_paperboy-base:0.1.0
+      - image: darthjee/circleci_paperboy-base:0.0.5
         environment:
           PAPERBOY_MYSQL_HOST: mysql
           PAPERBOY_MYSQL_PORT: 3306
@@ -48,8 +48,8 @@ jobs:
           name: Bundle Install
           command: bundle install
       - run:
-          name: Yarn Install
-          command: yarn install
+          name: Bower Install
+          command: bundle exec rake bower:install
       - run:
           name: Wait for database
           command: scripts/wait_for_db.sh
@@ -65,7 +65,7 @@ jobs:
 
   checks:
     docker:
-      - image: darthjee/circleci_paperboy-base:0.1.0
+      - image: darthjee/circleci_paperboy-base:0.0.5
         environment:
           PAPERBOY_MYSQL_HOST: mysql
           PAPERBOY_MYSQL_PORT: 3306
